// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text text measurements should measure text currently 1`] = `
{
  "height": 16.81640625,
  "lineHeight": 24,
  "offsetLeft": 0.38671875,
  "offsetTop": 22.453125,
  "width": 123.3046875,
}
`;

exports[`Text text measurements should measure text currently 2`] = `
{
  "height": 33.890625,
  "lineHeight": 48,
  "offsetLeft": 129.515625,
  "offsetTop": 21.1640625,
  "width": 257.296875,
}
`;

exports[`Text text measurements should measure text size currently 1`] = `
{
  "height": 16.81640625,
  "lineHeight": 24,
  "offsetLeft": 0.38671875,
  "offsetTop": 16.453125,
  "width": 123.3046875,
}
`;

exports[`Text text measurements should measure text size currently 2`] = `
{
  "height": 33.890625,
  "lineHeight": 48,
  "offsetLeft": 0.8671875,
  "offsetTop": 33.1640625,
  "width": 257.296875,
}
`;
